# posedetect

./: .gitattributes  .gitignore  OPENPOSE_PARAMETERS.md  README.md  README_SCRIPTS.md  SETUP.md  hello.py  pyproject.toml  run-simple.ps1  run.ps1
.personal/: extract_video_frame.bat
config/: video_config.json
docs/: CSV_AND_VIDEO_OVERLAY_DESIGN.md  FRAME_EXTRACTION.md  IMPLEMENTATION_SUMMARY.md  POSE_FILTERING.md
examples/: comprehensive_frame_extraction.py  example_frame_extraction.py  example_usage.py
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/docs/: DESIGN.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/dashboard/: Stats.tsx
frontend/src/components/files/: FileManager.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/processing/: ProcessingStatus.tsx
frontend/src/components/providers/: ToastProvider.tsx
frontend/src/components/upload/: FileUpload.tsx
server/: Makefile  README.md  SETUP.md  main.py  pyproject.toml  requirements.txt
server/app/: __init__.py
server/app/api/: __init__.py
server/app/api/v1/: __init__.py  router.py
server/app/api/v1/endpoints/: __init__.py  files.py
server/app/core/: __init__.py  config.py  database.py
server/app/models/: __init__.py  file.py  processing_job.py
server/app/schemas/: __init__.py  file.py
server/app/services/: __init__.py
src/: video2pose.py
src/posedetect/: __init__.py
src/posedetect/cli/: __init__.py  main.py
src/posedetect/core/: __init__.py  detector.py  mediapipe_detector.py  visualizer.py
src/posedetect/exporters/: __init__.py  csv_exporter.py  json_exporter.py
src/posedetect/models/: __init__.py  pose.py
src/posedetect/utils/: __init__.py  file_handler.py  logging_config.py  output_manager.py  pose_filter.py  video_processor.py
src/posedetect/video/: __init__.py  frame_extraction.py  overlay_generator.py
tests/: __init__.py  test_cli.py  test_enhanced_output_manager.py  test_enhanced_video_processing.py  test_exporters.py  test_frame_extraction.py  test_models.py  test_pose_filtering.py  test_toronto_gait_export.py  test_utils.py  test_video_overlay.py
tools/: diagnose_openpose.py
