[project]
name = "posedetect"
version = "0.1.0"
description = "OpenPose-based pose detection for videos and images"
readme = "README.md"
requires-python = ">=3.7,<3.8"
dependencies = [
    "python-dotenv>=0.19.0,<1.0.0",
    "loguru>=0.7.0",
    "opencv-python>=4.8.0",
    "numpy>=1.19.0,<1.22.0",
    "Pillow>=8.0.0,<9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0,<23.0.0",
    "flake8>=5.0.0,<6.0.0",
    "mypy>=0.991,<1.0.0",
]

[project.scripts]
video2pose = "posedetect.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
